--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.ru.klimashd</groupId>
-  <artifactId>UserInterface</artifactId>
+  <artifactId>UserRegistration</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>UserInterface</name>
+  <name>UserRegistration</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -82,6 +82,8 @@
       <artifactId>httpclient5</artifactId>
       <version>5.3.1</version>
     </dependency>
+
+
   </dependencies>
 
   <build>
